RESOLVED FIXED42697
WebKitTestRunner needs layoutTestController.setPrivateBrowsingEnabled
https://bugs.webkit.org/show_bug.cgi?id=42697
Summary WebKitTestRunner needs layoutTestController.setPrivateBrowsingEnabled
Sam Weinig
Reported 2010-07-20 15:17:13 PDT
WebKitTestRunner needs layoutTestController.setPrivateBrowsingEnabled
Attachments
patch (12.20 KB, patch)
2011-05-25 09:00 PDT, qi
hausmann: review+
commit-queue: commit-queue-
Sam Weinig
Comment 1 2010-07-20 15:31:04 PDT
qi
Comment 2 2011-05-25 09:00:13 PDT
Simon Hausmann
Comment 3 2011-05-25 17:05:57 PDT
Comment on attachment 94788 [details] patch r=me
WebKit Commit Bot
Comment 4 2011-05-25 18:49:55 PDT
Comment on attachment 94788 [details] patch Rejecting attachment 94788 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-8', 'land-a..." exit_code: 1 Last 500 characters of output: autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output: http://queues.webkit.org/results/8736112
qi
Comment 5 2011-05-26 06:09:07 PDT
Looks the comment#4 is wrong, the code already landed, the revision number is 87348. Closed the bug.
Anders Carlsson
Comment 6 2011-09-02 11:02:10 PDT
*** Bug 59857 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.