Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp
@@ -179,6 +179,7 @@ void InjectedBundle::beginTesting()
     WKBundleRemoveAllVisitedLinks(m_bundle);
     WKBundleSetAllowUniversalAccessFromFileURLs(m_bundle, m_pageGroup, true);
     WKBundleSetJavaScriptCanAccessClipboard(m_bundle, m_pageGroup, true);
+    WKBundleSetPrivateBrowsingEnabled(m_bundle, m_pageGroup, false);
 
     WKBundleRemoveAllUserContent(m_bundle, m_pageGroup);
 
